Renaming the application from thir (That's How I Roll) to third (THIRD's How I Roll Dice). Not only does the new name have a recursive acronym, which is _so_ geek, but the pronunciation is obvious because "third" is also real word.

--- a/README.html
+++ b/README.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>THIR README</title>
+    <title>THIRD README</title>
 
     <style type="text/css">
       body {
@@ -26,6 +26,11 @@
       p {
 	margin-left: 2em;
 	line-height: 130%;
+      }
+
+      p.tagline {
+       font-style: italic;
+       color: gray;
       }
 
       code {
@@ -55,9 +60,9 @@
 
   <body>
 
-    <h1>THIR - That's How I Roll</h1>
+    <h1>THIRD - THIRD's How I Roll Dice</h1>
 
-    <p>A dice roller by <a href="mailto:direvus@gmail.com?subject=THIR">Brendan Jurd</a>.</p>
+    <p class="tagline">A dice roller for roleplaying nerds, by <a href="mailto:direvus@gmail.com?subject=THIRD">Brendan Jurd</a>.</p>
 
     <h2>Premise</h2>
 
@@ -69,7 +74,7 @@
 
     <h2>Installation</h2>
 
-    <p>Just extract the executable file thir.exe to wherever you like.  <code>C:\Program Files\thir\</code> is a good choice.</p>
+    <p>Just extract the executable file third.exe to wherever you like.  <code>C:\Program Files\third\</code> is a good choice.</p>
     <p>Then run it.  The program is entirely self contained.</p>
 
     <h2>Usage</h2>
@@ -121,7 +126,7 @@
 
     <p>Once you've saved a preset you can roll it by double-clicking on the preset in the listbox.</p>
 
-    <p>Presets are saved to a file, located at <code>%AppData%\thir\presets.txt</code><a href="#fn" class="footnote">*</a>, when you close THIR.  When you open THIR again, the file is opened and all the presets saved therein are loaded up into the presets listbox.  Convenient!</p>
+    <p>Presets are saved to a file, located at <code>%AppData%\third\presets.txt</code><a href="#fn" class="footnote">*</a>, when you close THIRD.  When you open THIRD again, the file is opened and all the presets saved therein are loaded up into the presets listbox.  Convenient!</p>
 
     <p>You can <strong>Delete</strong> a preset if you no longer want it, or <strong>Update</strong> it with the current configuration, or <strong>Rename</strong> it.</p>
 
@@ -133,12 +138,12 @@
 
     <h2>Distribution</h2>
 
-    <p>Feel free to use and distribute THIR in whatever way you like.  With this README, without it, in a nice little box with a ribbon on it, I don't really care.  There is no cost and concordantly there is no warranty, not even implied ones.  The copyright for all source code and images is held by me.</p>
+    <p>Feel free to use and distribute THIRD in whatever way you like.  With this README, without it, in a nice little box with a ribbon on it, I don't really care.  There is no cost and concordantly there is no warranty, not even implied ones.  The copyright for all source code and images is held by me.</p>
 
     <h2>Uninstallation</h2>
 	
-    <p>Delete the thir executable, and the directory <code>%AppData%\thir</code>.</p>
+    <p>Delete the third executable, and the directory <code>%AppData%\third</code>.</p>
 
     <h2>Contact</h2>
 
-    <p>You can send bug reports or feature requests to <a href="mailto:direvus@gmail.com?subject=THIR">direvus@gmail.com</a>.  The latest release version of THIR is available at <a href="http://swords.id.au/thir.zip">http://swords.id.au/thir.zip</a>.</p>
+    <p>You can send bug reports or feature requests to <a href="mailto:direvus@gmail.com?subject=THIRD">direvus@gmail.com</a>.  The latest release version of THIRD is available at <a href="http://swords.id.au/third.zip">http://swords.id.au/third.zip</a>.</p>
